# toy-miniSysY

./: CMakeLists.txt  Dockerfile  README.md  judge.toml
src/: main.cpp
src/conv/: CMakeLists.txt  ssa.cpp  ssa.h  typecheck.cpp  typecheck.h
src/frontend/: CMakeLists.txt  parser.cpp  parser.h
src/structure/: CmakeLists.txt  ast.cpp  ast.h  ir.cpp  ir.h
src/util/: CMakeLists.txt  common.h  dbg.h
